[gd_scene load_steps=3 format=3 uid="uid://eies0lnegrf6"]

[ext_resource type="Script" path="res://Scenes/TitleScreen/ConfigureSingleplayerMenu.gd" id="1_dgq16"]
[ext_resource type="PackedScene" uid="uid://dc67simk1xfp4" path="res://GameModeUI.tscn" id="2_7m6il"]

[node name="ConfigureSingleplayerMenu" type="VBoxContainer" node_paths=PackedStringArray("_game_mode_ui")]
script = ExtResource("1_dgq16")
_game_mode_ui = NodePath("GameModeUI")

[node name="Label" type="Label" parent="."]
layout_mode = 2
theme_type_variation = &"LabelLarge"
text = "Choose game settings:"

[node name="GameModeUI" parent="." instance=ExtResource("2_7m6il")]
layout_mode = 2

[node name="Spacer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
alignment = 2

[node name="CancelButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Cancel"

[node name="StartButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Start"

[connection signal="pressed" from="HBoxContainer/CancelButton" to="." method="_on_cancel_button_pressed"]
[connection signal="pressed" from="HBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
